creacion de servicios, controladores, mergeo con trabajo de sofia mas solucion de fixes varios

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,14 +1,10 @@
-/.metadata/
-/.project
 /App$1.class
 /App.class
-/config/
-/controller/
-/domain/
-/images/
-/repository/
-/service/
+*.class
 /view/
+/service/
+/repository/
+/controller/
+/images/
 /bbdd/
-/teleservice.uml
-/teleservice.umlcd
+/domain/
